--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
   "devDependencies": {
     "jshint": "^2.5.6"
   },
+    "engines": {
+        "node": "0.12.x"
+    },
   "repository": {
     "type": "",
     "url": ""
