--- a/ionic/platforms/ios/maps-clean/maps-clean-Info.plist
+++ b/ionic/platforms/ios/maps-clean/maps-clean-Info.plist
@@ -173,5 +173,9 @@
     </array>
     <key>NSLocationWhenInUseUsageDescription</key>
     <string></string>
+    <key>UIBackgroundModes</key>
+    <array>
+      <string>audio</string>
+    </array>
   </dict>
 </plist>
